--- a/Medogonka_L152/.cproject
+++ b/Medogonka_L152/.cproject
@@ -201,5 +201,12 @@
 			<autodiscovery enabled="false" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Debug">
+			<resource resourceType="PROJECT" workspacePath="/Medogonka_L152"/>
+		</configuration>
+		<configuration configurationName="Release">
+			<resource resourceType="PROJECT" workspacePath="/Medogonka_L152"/>
+		</configuration>
+	</storageModule>
 </cproject>
